--- a/Homework-1/index.html
+++ b/Homework-1/index.html
@@ -8,11 +8,15 @@
   <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 </head>
 <body>
-  <h1 class="source">Resource: <a href="https://newsapi.org/" target="blank">https://newsapi.org/</a></h1>
-  <div id="root">
-    <div id="newsroot"></div>
-    <button id="more-button">More</button>
+  <h1 class="resource">Resource: <a href="https://newsapi.org/" target="blank">https://newsapi.org/</a></h1>
+  <button id="source-button">Source</button>
+  <div id="sources">
+    <h2>Choose news source</h2>
+    <div id="sourcesroot"></div>
   </div>
-  <script src="js/main.js"></script>
+  <div id="news">
+    <div id="newsroot"></div>
+  </div>
+  <script src="dist/bundle.js"></script>
 </body>
 </html>
