--- a/Homework-3/index.html
+++ b/Homework-3/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Homework 1</title>
+  <title>Homework 3</title>
   <!-- <meta http-equiv="refresh" content="3"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="dist/main.css" />
 </head>
 <body>
   <h1 class="resource">Resource: <a href="https://newsapi.org/" target="blank">https://newsapi.org/</a></h1>
@@ -18,13 +18,11 @@
     <div id="news">
       <div id="newsroot"></div>
     </div>
-    <div id="preloadroot" hidden>
-      <p class="loading-text">Loading...</p>
-    </div>
+    <div id="preloadroot" hidden></div>
     <div id="error">
       <p class="error-message">Something went wrong. Try again.</p>
     </div>
   </div>
-  <script src="dist/bundle.js"></script>
+  <script src="dist/main.bundle.js"></script>
 </body>
 </html>
